app/airflow/overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-dev
  annotations:
    #ingressClassName: "nginx"
    nginx.org/redirect-to-https: "true"
    #nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - airflow-dev.com.br
  rules:
  - host: airflow-dev.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
